seaqt/QtWidgets/gen_qplaintextedit.h

typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMimeData QMimeData;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTextCursor QTextCursor;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QPlainTextEdit_override_virtual_metacast(void* self, intptr_t slot);
bool QPlainTextEdit_override_virtual_metacall(void* self, intptr_t slot);
int QPlainTextEdit_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QPlainTextEdit_override_virtual_loadResource(void* self, intptr_t slot);
QVariant* QPlainTextEdit_virtualbase_loadResource(void* self, int type, QUrl* name);
bool QPlainTextEdit_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QPlainTextEdit_virtualbase_inputMethodQuery(const void* self, int property);
bool QPlainTextEdit_override_virtual_event(void* self, intptr_t slot);
bool QPlainTextEdit_virtualbase_event(void* self, QEvent* e);
bool QPlainTextEdit_override_virtual_timerEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_timerEvent(void* self, QTimerEvent* e);
bool QPlainTextEdit_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_keyPressEvent(void* self, QKeyEvent* e);
bool QPlainTextEdit_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_keyReleaseEvent(void* self, QKeyEvent* e);
bool QPlainTextEdit_override_virtual_resizeEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_resizeEvent(void* self, QResizeEvent* e);
bool QPlainTextEdit_override_virtual_paintEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_paintEvent(void* self, QPaintEvent* e);
bool QPlainTextEdit_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_mousePressEvent(void* self, QMouseEvent* e);
bool QPlainTextEdit_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_mouseMoveEvent(void* self, QMouseEvent* e);
bool QPlainTextEdit_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
bool QPlainTextEdit_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* e);
bool QPlainTextEdit_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QPlainTextEdit_virtualbase_focusNextPrevChild(void* self, bool next);
bool QPlainTextEdit_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* e);
bool QPlainTextEdit_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* e);
bool QPlainTextEdit_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* e);
bool QPlainTextEdit_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* e);
bool QPlainTextEdit_override_virtual_dropEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_dropEvent(void* self, QDropEvent* e);
bool QPlainTextEdit_override_virtual_focusInEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_focusInEvent(void* self, QFocusEvent* e);
bool QPlainTextEdit_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_focusOutEvent(void* self, QFocusEvent* e);
bool QPlainTextEdit_override_virtual_showEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_showEvent(void* self, QShowEvent* param1);
bool QPlainTextEdit_override_virtual_changeEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_changeEvent(void* self, QEvent* e);
bool QPlainTextEdit_override_virtual_wheelEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_wheelEvent(void* self, QWheelEvent* e);
bool QPlainTextEdit_override_virtual_createMimeDataFromSelection(void* self, intptr_t slot);
QMimeData* QPlainTextEdit_virtualbase_createMimeDataFromSelection(const void* self);
bool QPlainTextEdit_override_virtual_canInsertFromMimeData(void* self, intptr_t slot);
bool QPlainTextEdit_virtualbase_canInsertFromMimeData(const void* self, QMimeData* source);
bool QPlainTextEdit_override_virtual_insertFromMimeData(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_insertFromMimeData(void* self, QMimeData* source);
bool QPlainTextEdit_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QPlainTextEdit_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QPlainTextEdit_override_virtual_doSetTextCursor(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_doSetTextCursor(void* self, QTextCursor* cursor);
bool QPlainTextEdit_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QPlainTextEdit_virtualbase_minimumSizeHint(const void* self);
bool QPlainTextEdit_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QPlainTextEdit_virtualbase_sizeHint(const void* self);
bool QPlainTextEdit_override_virtual_setupViewport(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QPlainTextEdit_override_virtual_eventFilter(void* self, intptr_t slot);
bool QPlainTextEdit_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QPlainTextEdit_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QPlainTextEdit_virtualbase_viewportEvent(void* self, QEvent* param1);
bool QPlainTextEdit_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QPlainTextEdit_virtualbase_viewportSizeHint(const void* self);
bool QPlainTextEdit_override_virtual_initStyleOption(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
bool QPlainTextEdit_override_virtual_devType(void* self, intptr_t slot);
int QPlainTextEdit_virtualbase_devType(const void* self);
bool QPlainTextEdit_override_virtual_setVisible(void* self, intptr_t slot);
void QPlainTextEdit_virtualbase_setVisible(void* self, bool visible);
bool QPlainTextEdit_override_virtual_heightForWidth(void* self, intptr_t slot);
int QPlainTextEdit_virtualbase_heightForWidth(const void* self, int param1);
bool QPlainTextEdit_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QPlainTextEdit_virtualbase_hasHeightForWidth(const void* self);
bool QPlainTextEdit_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QPlainTextEdit_virtualbase_paintEngine(const void* self);
void QPlainTextEdit_virtualbase_enterEvent(void* self, QEnterEvent* event);