seaqt/QtWidgets/gen_qplaintextedit.nim

proc fcQPlainTextEdit_override_virtual_metacast(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_metacast".}
proc fQPlainTextEdit_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QPlainTextEdit_virtualbase_metacall".}
proc fcQPlainTextEdit_override_virtual_metacall(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_metacall".}
proc fQPlainTextEdit_virtualbase_loadResource(self: pointer, typeVal: cint, name: pointer): pointer{.importc: "QPlainTextEdit_virtualbase_loadResource".}
proc fcQPlainTextEdit_override_virtual_loadResource(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_loadResource".}
proc fQPlainTextEdit_virtualbase_inputMethodQuery(self: pointer, property: cint): pointer{.importc: "QPlainTextEdit_virtualbase_inputMethodQuery".}
proc fcQPlainTextEdit_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_inputMethodQuery".}
proc fQPlainTextEdit_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QPlainTextEdit_virtualbase_event".}
proc fcQPlainTextEdit_override_virtual_event(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_event".}
proc fQPlainTextEdit_virtualbase_timerEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_timerEvent".}
proc fcQPlainTextEdit_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_timerEvent".}
proc fQPlainTextEdit_virtualbase_keyPressEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_keyPressEvent".}
proc fcQPlainTextEdit_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_keyPressEvent".}
proc fQPlainTextEdit_virtualbase_keyReleaseEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_keyReleaseEvent".}
proc fcQPlainTextEdit_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_keyReleaseEvent".}
proc fQPlainTextEdit_virtualbase_resizeEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_resizeEvent".}
proc fcQPlainTextEdit_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_resizeEvent".}
proc fQPlainTextEdit_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_paintEvent".}
proc fcQPlainTextEdit_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_paintEvent".}
proc fQPlainTextEdit_virtualbase_mousePressEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_mousePressEvent".}
proc fcQPlainTextEdit_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_mousePressEvent".}
proc fQPlainTextEdit_virtualbase_mouseMoveEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_mouseMoveEvent".}
proc fcQPlainTextEdit_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_mouseMoveEvent".}
proc fQPlainTextEdit_virtualbase_mouseReleaseEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_mouseReleaseEvent".}
proc fcQPlainTextEdit_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_mouseReleaseEvent".}
proc fQPlainTextEdit_virtualbase_mouseDoubleClickEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_mouseDoubleClickEvent".}
proc fcQPlainTextEdit_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_mouseDoubleClickEvent".}
proc fQPlainTextEdit_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QPlainTextEdit_virtualbase_focusNextPrevChild".}
proc fcQPlainTextEdit_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_focusNextPrevChild".}
proc fQPlainTextEdit_virtualbase_contextMenuEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_contextMenuEvent".}
proc fcQPlainTextEdit_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_contextMenuEvent".}
proc fQPlainTextEdit_virtualbase_dragEnterEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_dragEnterEvent".}
proc fcQPlainTextEdit_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_dragEnterEvent".}
proc fQPlainTextEdit_virtualbase_dragLeaveEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_dragLeaveEvent".}
proc fcQPlainTextEdit_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_dragLeaveEvent".}
proc fQPlainTextEdit_virtualbase_dragMoveEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_dragMoveEvent".}
proc fcQPlainTextEdit_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_dragMoveEvent".}
proc fQPlainTextEdit_virtualbase_dropEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_dropEvent".}
proc fcQPlainTextEdit_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_dropEvent".}
proc fQPlainTextEdit_virtualbase_focusInEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_focusInEvent".}
proc fcQPlainTextEdit_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_focusInEvent".}
proc fQPlainTextEdit_virtualbase_focusOutEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_focusOutEvent".}
proc fcQPlainTextEdit_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_focusOutEvent".}
proc fQPlainTextEdit_virtualbase_showEvent(self: pointer, param1: pointer): void{.importc: "QPlainTextEdit_virtualbase_showEvent".}
proc fcQPlainTextEdit_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_showEvent".}
proc fQPlainTextEdit_virtualbase_changeEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_changeEvent".}
proc fcQPlainTextEdit_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_changeEvent".}
proc fQPlainTextEdit_virtualbase_wheelEvent(self: pointer, e: pointer): void{.importc: "QPlainTextEdit_virtualbase_wheelEvent".}
proc fcQPlainTextEdit_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_wheelEvent".}
proc fQPlainTextEdit_virtualbase_createMimeDataFromSelection(self: pointer, ): pointer{.importc: "QPlainTextEdit_virtualbase_createMimeDataFromSelection".}
proc fcQPlainTextEdit_override_virtual_createMimeDataFromSelection(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_createMimeDataFromSelection".}
proc fQPlainTextEdit_virtualbase_canInsertFromMimeData(self: pointer, source: pointer): bool{.importc: "QPlainTextEdit_virtualbase_canInsertFromMimeData".}
proc fcQPlainTextEdit_override_virtual_canInsertFromMimeData(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_canInsertFromMimeData".}
proc fQPlainTextEdit_virtualbase_insertFromMimeData(self: pointer, source: pointer): void{.importc: "QPlainTextEdit_virtualbase_insertFromMimeData".}
proc fcQPlainTextEdit_override_virtual_insertFromMimeData(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_insertFromMimeData".}
proc fQPlainTextEdit_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QPlainTextEdit_virtualbase_inputMethodEvent".}
proc fcQPlainTextEdit_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_inputMethodEvent".}
proc fQPlainTextEdit_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QPlainTextEdit_virtualbase_scrollContentsBy".}
proc fcQPlainTextEdit_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_scrollContentsBy".}
proc fQPlainTextEdit_virtualbase_doSetTextCursor(self: pointer, cursor: pointer): void{.importc: "QPlainTextEdit_virtualbase_doSetTextCursor".}
proc fcQPlainTextEdit_override_virtual_doSetTextCursor(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_doSetTextCursor".}
proc fQPlainTextEdit_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QPlainTextEdit_virtualbase_minimumSizeHint".}
proc fcQPlainTextEdit_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_minimumSizeHint".}
proc fQPlainTextEdit_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QPlainTextEdit_virtualbase_sizeHint".}
proc fcQPlainTextEdit_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_sizeHint".}
proc fQPlainTextEdit_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QPlainTextEdit_virtualbase_setupViewport".}
proc fcQPlainTextEdit_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_setupViewport".}
proc fQPlainTextEdit_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QPlainTextEdit_virtualbase_eventFilter".}
proc fcQPlainTextEdit_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_eventFilter".}
proc fQPlainTextEdit_virtualbase_viewportEvent(self: pointer, param1: pointer): bool{.importc: "QPlainTextEdit_virtualbase_viewportEvent".}
proc fcQPlainTextEdit_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_viewportEvent".}
proc fQPlainTextEdit_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QPlainTextEdit_virtualbase_viewportSizeHint".}
proc fcQPlainTextEdit_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_viewportSizeHint".}
proc fQPlainTextEdit_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QPlainTextEdit_virtualbase_initStyleOption".}
proc fcQPlainTextEdit_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_initStyleOption".}
proc fQPlainTextEdit_virtualbase_devType(self: pointer, ): cint{.importc: "QPlainTextEdit_virtualbase_devType".}
proc fcQPlainTextEdit_override_virtual_devType(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_devType".}
proc fQPlainTextEdit_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QPlainTextEdit_virtualbase_setVisible".}
proc fcQPlainTextEdit_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_setVisible".}
proc fQPlainTextEdit_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QPlainTextEdit_virtualbase_heightForWidth".}
proc fcQPlainTextEdit_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_heightForWidth".}
proc fQPlainTextEdit_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QPlainTextEdit_virtualbase_hasHeightForWidth".}
proc fcQPlainTextEdit_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_hasHeightForWidth".}
proc fQPlainTextEdit_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QPlainTextEdit_virtualbase_paintEngine".}
proc fcQPlainTextEdit_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QPlainTextEdit_override_virtual_paintEngine".}
proc fQPlainTextEdit_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QPlainTextEdit_virtualbase_enterEvent".}
